--- a/ClientApp/src/app/raw-material/add-function/add-function.component.html
+++ b/ClientApp/src/app/raw-material/add-function/add-function.component.html
@@ -31,7 +31,7 @@
         <div class="form-inline">
           <mat-dialog-actions style="float:right">
             <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:20px;"(click)="clearfunc()">New</button>
-            <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:5px;" (click)="Functionsave(fun.value,des.value)">Save</button>
+            <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:5px;" (click)="Functionsave(fun.value,des.value)" matDialogClose>Save</button>
             <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:5px;" matDialogClose>Close</button>
           </mat-dialog-actions>
         </div>
