--- a/ClientApp/src/app/productization/add-component/search-component/search-component.component.html
+++ b/ClientApp/src/app/productization/add-component/search-component/search-component.component.html
@@ -9,13 +9,13 @@
         <div class="form-inline">
           <label for="inputCategory Name" style="margin-left:30px;">Component Item#</label>
 
-          <input type="text" class="form-control" [(ngModel)]="componentitemno" id="inputCategory Name" placeholder="" style="margin-top: 10px; width: 70%; margin-left: 20px;" name="cmpitno" value="">
+          <input type="text" class="form-control" [(ngModel)]="componentitemno" id="inputCategory Name" placeholder="" style="margin-top: 10px; width: 70%; margin-left: 20px;" name="cmpitno" value=""(ngModelChange) = "valuechange($event)">
 
         </div>
         <div class="form-inline">
           <label for="inputDescription" style="margin-left:33px;">Component Name</label>
 
-          <input type="text" class="form-control" [(ngModel)]="componentname" id="inputDescription" placeholder="" style=" width: 70%;margin-top: 10px;margin-left:20px;" name="descript" #des value="">
+          <input type="text" class="form-control" [(ngModel)]="componentname" id="inputDescription" placeholder="" style=" width: 70%;margin-top: 10px;margin-left:20px;" name="descript" #des value=""(ngModelChange) = "valuechanges($event)">
         </div>
         <div class="form-inline">
           <label for="inputDescription" style="margin-left:60px;">Category Type</label>
@@ -40,8 +40,8 @@
         </div>
 
         <div class="form-inline">
-          <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 20px; margin-top: 40px; width: 150px; height: 45px" [disabled]="isproductsave" (click)=" quicksave()">Quick save </button>
-          <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 5px; margin-top: 40px; width: 100px; height: 45px"  [disabled]="isproductupdate" (click)="update()">Update</button>
+          <button type="submit"[disabled]="issearchcomponentsave" class="btn btn-primary buttoncolor" style="margin-left: 20px; margin-top: 40px; width: 150px; height: 45px" (click)=" quicksave()">Quick save </button>
+          <button disabled type="submit" class="btn btn-primary buttoncolor" style="margin-left: 5px; margin-top: 40px; width: 100px; height: 45px" (click)="update()">Update</button>
           <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 5px; margin-top: 40px; width: 100px; height: 45px" (click)=" clear()">New</button>
 
         </div>
