--- a/ClientApp/src/app/productization/cmo/cmo.component.html
+++ b/ClientApp/src/app/productization/cmo/cmo.component.html
@@ -18,10 +18,10 @@
           <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px; margin-top: 50px; padding-top: 10px; width: 170px; height: 46px" (click)=" clear()">Clear</button>
         </form>
 
-        <!--<form class="form-inline" style="    background-color: #f6f5f1">
+        <form class="form-inline" style="    background-color: #f6f5f1">
           <label for="CMON" style="margin-left: 100px; margin-top: 50px; font-size: medium; font-family: Verdana;">CMO Number</label>
           <input type="text" style="margin-left: 10px; margin-top: 50px;" class="form-control" placeholder="" id="CMNo" size="80" [(ngModel)]="CMOnumber" name="cmno" value="">
-          </form>-->
+          </form>
 
 
 
