--- a/ClientApp/src/app/productization/componentlisting/componentlisting.component.html
+++ b/ClientApp/src/app/productization/componentlisting/componentlisting.component.html
@@ -9,7 +9,7 @@
         <div class="form-inline">
           <label for="inputCategory Name" style="margin-left:30px;">Component Item#</label>
 
-          <input type="text" class="form-control" [(ngModel)]="componentitemno1" id="inputCategory Name" placeholder="" style="margin-top: 10px; width: 70%; margin-left: 20px;" name="cmpitno" value="">
+          <input type="text" class="form-control" [(ngModel)]="componentitemno" id="inputCategory Name" placeholder="" style="margin-top: 10px; width: 70%; margin-left: 20px;" name="cmpitno" value="">
 
         </div>
         <div class="form-inline">
@@ -17,41 +17,40 @@
 
           <input type="text" class="form-control" [(ngModel)]="componentname" id="inputDescription" placeholder="" style=" width: 70%;margin-top: 10px;margin-left:20px;" name="descript" #des value="">
         </div>
-        
-      </div>
-      <div class="form-group col-md-4">
         <div class="form-inline">
-          <label for="inputCategory Name"  style="margin-left: 48px;">Supplier</label>
-
-          <input type="text" class="form-control" [(ngModel)]="supplierse" id="inputCategory Name" placeholder="" style="margin-top: 10px; width: 35%; margin-left: 10px;" name="sup" value="">
-          <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 5px; margin-top: 10px; width: 100px; height: 35px" (click)=" searchhsupplier()">Search </button>
-        </div>
-        <div class="form-inline">
-          <label for="inputDescription">Category Type</label>
-          <select id="Assigned_to" class="form-control" style="margin-left: 10px; margin-top: 10px; width: 55%" [(ngModel)]="categorytype" name="cate" value="">
+          <label for="inputDescription" style="margin-left:60px;">Category Type</label>
+          <select id="Assigned_to" class="form-control" style="margin-left: 20px; margin-top: 10px; width: 70%" [(ngModel)]="categorytype" name="cate" value="">
             <option selected>---select---</option>
             <option *ngFor="let details_cattype of loadcomponentcategory">{{details_cattype.categorytype }}</option>
           </select>
         </div>
-        <!--<div class="form-inline">
+      </div>
+      <div class="form-group col-md-4">
+        <div class="form-inline">
+          <label for="inputCategory Name">Supplier</label>
+
+          <input type="text" class="form-control" [(ngModel)]="supplierse" id="inputCategory Name" placeholder="" style="margin-top: 10px; width: 50%; margin-left: 10px;" name="sup" value="">
+          <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 5px; margin-top: 10px; width: 100px; height: 35px" (click)=" searchhsupplier()">Search </button>
+        </div>
+        <div class="form-inline">
           <Label class="label1" for="inputcust" style="margin-left: 10px; margin-top: 15px; font-size: medium; font-family: Verdana;">*Fillable Component</Label>
           <mat-radio-button value="Yes" [checked]="fillablecomponent == 'Yes' ? true : false" style="margin-left:10px;margin-top:15px;" (change)="radioChangefillablecomponent($event)">Yes</mat-radio-button>
           <mat-radio-button value="No" [checked]="fillablecomponent == 'No' ? true : false" style="margin-left: 10px;margin-top:15px;" (change)="radioChangefillablecomponent($event)">No</mat-radio-button>
           <mat-radio-button value="No" [checked]="fillablecomponent == 'Yes/No' ? true : false" style="margin-left: 10px;margin-top:15px;" (change)="radioChangefillablecomponent($event)">Both</mat-radio-button>
-        </div>-->
+        </div>
 
-
+       
         <!--<div class="form-inline">
-    <label hidden for="inputCategory Name" style="margin-left:20px">Category Code</label>
+          <label hidden for="inputCategory Name" style="margin-left:20px">Category Code</label>
 
-    <input hidden type="text" class="form-control" id="inputCategory Name" placeholder="" style="margin-left:2.5%;margin-top:10px; width: 10%;">
+          <input hidden type="text" class="form-control" id="inputCategory Name" placeholder="" style="margin-left:2.5%;margin-top:10px; width: 10%;">
 
-  </div>
-  <div class="form-inline">
-    <label hidden for="inputDescription" style="margin-right:10px">Category Id</label>
+        </div>
+        <div class="form-inline">
+          <label hidden for="inputDescription" style="margin-right:10px">Category Id</label>
 
-    <input hidden type="text" class="form-control" [(ngModel)]="cateid" id="inputCategoryid" placeholder="" style="margin-left:2.5%;margin-top:10px; width: 10%;" #categorymainval value="" name="categorymainval">
-  </div>-->
+          <input hidden type="text" class="form-control" [(ngModel)]="cateid" id="inputCategoryid" placeholder="" style="margin-left:2.5%;margin-top:10px; width: 10%;" #categorymainval value="" name="categorymainval">
+        </div>-->
       </div>
 
     </div>
@@ -60,16 +59,6 @@
 
     <div class="form-row">
       <div class="form-group col-md-3">
-        <div style="margin-left: 10%; margin-top: 5%; height: 700px; overflow-y: auto; background-color: white; text-align: center;">
-          <div style=" text-align: center; border: solid 0.1px darkgrey;background-color:">
-            <label for="PDR" style="margin-left: 5px; margin-top: 20px; font-size: large; font-family: Verdana;"><b>Poduct Image</b></label><br />
-            <input type="image" src="" alt="" width="200" height="200" style="margin-left: 5px;margin-top:40px;" placeholder="NO IMAGE AVIALABLE" />
-          </div>
-          <div style=" text-align: center; border: solid 0.1px darkgrey">
-            <label for="PDR" style="margin-left: 5px; margin-top: 20px; font-size: large; font-family: Verdana;"><b>Dscriptions</b></label><br />
-            <textarea class="form-control" id="imdes" rows="3" style="width: 90%; height: 330PX; margin-left: 15px; margin-top: 10px;" [(ngModel)]="imagedescription" name="ima" value=""></textarea>
-          </div>
-        </div>
 
       </div>
       <div class="form-group col-md-9">
@@ -91,7 +80,7 @@
 
               </tr>
             </thead>
-       
+
             <tbody>
               <tr height="20px" *ngFor="let details_comp of loadcomponentdata; let i=index;" (dblclick)="setvalues(details_comp);Close();" #conten>
                 <td></td>
@@ -109,9 +98,7 @@
 
           </table>
 
-
         </div>
-        <h5 style="float:left;margin-top:10px;color:maroon">{{count}} Record(s)</h5>
       </div>
     </div>
   </div>
@@ -119,12 +106,10 @@
   <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
 
 
-    <button type="submit" class="btn btn-primary  buttoncolor" style="float:left;height:40px;margin-top:1%" (click)="componentadd();">Add Componenet</button>
+
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:40px;margin-top:1%" matDialogClose>Close</button>
-    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:40px;margin-top:1%;margin-right:10px;">Create Report</button>
 
-
-
+    <h5 style="float:left;margin-top:10px;color:maroon">{{count}} Record(s)</h5>
 
   </div>
 
