--- a/ClientApp/src/app/formula-listing/formula-listing.component.css
+++ b/ClientApp/src/app/formula-listing/formula-listing.component.css
@@ -17,7 +17,48 @@ p.test {
   font-size: 14px;
   font-weight: bold;
 }
-
+.dot {
+  height: 25px;
+  width: 25px;
+  background-color: red;
+  border-radius: 50%;
+  display: inline-block;
+}
+.dotmon {
+  height: 50px;
+  width: 50px;
+  background-color: red;
+  border-radius: 50%;
+  display: inline-block;
+}
+.dottue {
+  height: 50px;
+  width: 50px;
+  background-color: blue;
+  border-radius: 50%;
+  display: inline-block;
+}
+.dotwed {
+  height: 50px;
+  width: 50px;
+  background-color: yellow;
+  border-radius: 50%;
+  display: inline-block;
+}
+.dotthurs {
+  height: 50px;
+  width: 50px;
+  background-color: green;
+  border-radius: 50%;
+  display: inline-block;
+}
+.dotfri {
+  height: 50px;
+  width: 50px;
+  background-color: white;
+  border-radius: 50%;
+  display: inline-block;
+}
 .form-check-input {
   width: 20px;
   height: 20px;
