--- a/ClientApp/src/app/formula-listing/formula-listing.component.html
+++ b/ClientApp/src/app/formula-listing/formula-listing.component.html
@@ -67,7 +67,7 @@
               </div>
             </div>
             <div class="form-group col-md-4">
-              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px ">Clear</button>
+              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px "(click)="Cleardataall()">Clear</button>
             </div>
           </div>
 
@@ -161,7 +161,7 @@
 
             </div>
             <div class="form-group col-md-4">
-              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px ">Clear</button>
+              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px "(click)="cleardatamyformula();">Clear</button>
             </div>
           </div>
 
@@ -224,7 +224,7 @@
               </div>
             </div>
             <div class="form-group col-md-4">
-              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;"(click)="ClearData();">Clear</button>
+              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;"(click)="cleardataproducts();">Clear</button>
 
             </div>
           </div>
@@ -361,7 +361,7 @@
               </div>
             </div>
             <div class="form-group col-md-4">
-              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px ">Clear</button>
+              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px "(click)="cleardatacompanyowned()">Clear</button>
             </div>
           </div>
 
@@ -463,7 +463,7 @@
               </div>
             </div>
             <div class="form-group col-md-4">
-              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px ">Clear</button>
+              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px "(click)=" cleardatacustomerowned();">Clear</button>
             </div>
           </div>
           <div class="form-row">
@@ -577,7 +577,7 @@
               </div>
             </div>
             <div class="form-group col-md-4">
-              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px ">Clear</button>
+              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px "(click)="cleardatageneric()">Clear</button>
             </div>
           </div>
 
@@ -633,7 +633,7 @@
               </div>
             </div>
             <div class="form-group col-md-4">
-              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;">Clear</button>
+              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;"(click)="cleardatalabnotbook()">Clear</button>
             </div>
           </div>
           <div class="form-row">
@@ -755,7 +755,7 @@
               </div>
             </div>
             <div class="form-group col-md-4">
-              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px ">Clear</button>
+              <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px "(click)="cleardatacust()">Clear</button>
             </div>
           </div>
           <div class="form-row">
@@ -854,7 +854,7 @@
                       
                     </div>
                     <div class="form-group col-md-4">
-                      <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px ">Clear</button>
+                      <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px "(click)="clearstab()">Clear</button>
                     </div>
                   </div>
                   <div class="form-row">
@@ -869,7 +869,7 @@
                 <div style="color: black">
                   <p class="font-weight-bold">Double Click to Go for More Details</p>
                 </div>
-                <div style="margin-left:10px;margin-top:1%; height:45vh; overflow-y: auto;background-color:white">
+                <div style="margin-left:10px;margin-top:1%; height:43vh; overflow-y: auto;background-color:white">
                   <table class="table table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
                     <thead>
                       <tr>
@@ -908,8 +908,95 @@
             </ngb-tab>
             <ngb-tab title="Daily Test Schedule">
               <ng-template ngbTabContent>
-                <form>
-                </form>
+                <fieldset class="border p-0" style="margin-bottom:1%">
+                  <legend class="w-auto" style="font-size:15px;color:maroon; margin-left:1%">Filter by Day</legend>
+                  <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <div class="form-inline">
+                        <label>WeekDay</label>
+                        <select id="weekdaystab" class="form-control" style="width:65%;margin-top:10px" [(ngModel)]="dayName" name="weekstab" value="" (change)="changecolor($event)">
+
+                          
+                          <option>Monday</option>
+                          <option>Tuesday</option>
+                          <option>Wednesday</option>
+                          <option>Thursday</option>
+                          <option>Friday</option>
+                          
+                        </select>
+                      </div>
+                      <!--<label for="search" style="margin-left: 100px;">search</label>-->
+
+
+                    </div>
+
+                    <div class="form-group col-md-6 form-inline">
+                      <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px " (click)="cleardatadailystab();">Clear</button>
+                      <div style="text-align:center; margin-left:40%">
+
+                        <span [hidden]="mon" class="dotmon">
+                          <label style="margin-left:10px">Monday</label>
+                        </span>
+                        <span [hidden]="tue" class="dottue">
+                          <label style="margin-left:10px">Tuesday</label>
+                        </span>
+                        <span [hidden]="wed" class="dotwed">
+                          <label style="margin-left:10px">Wednesday</label>
+
+                        </span>
+                        <span [hidden]="thur" class="dotthurs">
+                          <label style="margin-left:10px">Thursday</label>
+                        </span>
+                        <span [hidden]="fri" class="dotfri">
+                          <label style="margin-left:10px">Friday</label>
+                        </span>
+
+                      </div>
+                    </div>
+                    
+
+                  </div>
+                 
+                </fieldset>
+                <div style="color: black">
+                  <p class="font-weight-bold">Double Click to Go for More Details</p>
+                </div>
+                <div style="margin-left:10px;margin-top:1%; height:48vh; overflow-y: auto;background-color:white">
+                  <table class="table table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
+                    <thead>
+                      <tr>
+                        <th class="header" scope="col">Customer</th>
+                        <th class="header" scope="col">Formula #</th>
+                        <th class="header" scope="col">Formula </th>
+                        <th class="header" scope="col">Start Date</th>
+                        <th class="header" scope="col">Week</th>
+                        <th hidden class="header" scope="col">day</th>
+
+
+
+
+
+
+                        <!--<th scope="col">Customer Code</th>-->
+                      </tr>
+                    </thead>
+                    <tbody>
+
+                      <tr *ngFor="let load_custom of loadstabilityweekdata|filter:dayName:filterMetadata  ;let i=index;">
+                        <td>{{ load_custom.stabno}}</td>
+                        <td>{{ load_custom.formulacode }}</td>
+                        <td>{{ load_custom.formulname }}</td>
+                        <td>{{ load_custom.startdate }}</td>
+                        <td>{{ load_custom.week }}</td>
+                        <td hidden>{{ load_custom.daydata }}</td>
+
+
+
+                        <!--<td class="tabledatasize">{{ customer_search.CustomerCode}}</td>-->
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </ng-template>
             </ngb-tab>
           </ngb-tabset>
@@ -960,7 +1047,7 @@
 
                     </div>
                     <div class="form-group col-md-4">
-                      <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px ">Clear</button>
+                      <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px "(click)="clearcomp()">Clear</button>
                     </div>
                   </div>
                   <div class="form-row">
@@ -975,7 +1062,7 @@
                 <div style="color: black">
                   <p class="font-weight-bold">Double Click to Go for More Details</p>
                 </div>
-                <div style="margin-left:10px;margin-top:1%; height:45vh; overflow-y: auto;background-color:white">
+                <div style="margin-left:10px;margin-top:1%; height:43vh; overflow-y: auto;background-color:white">
                   <table class="table table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
                     <thead>
                       <tr>
@@ -1015,8 +1102,96 @@
             </ngb-tab>
             <ngb-tab title="Daily Test Schedule">
               <ng-template ngbTabContent>
-                <form>
-                </form>
+                <fieldset class="border p-0" style="margin-bottom:1%">
+                  <legend class="w-auto" style="font-size:15px;color:maroon; margin-left:1%">Filter by Day</legend>
+                  <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <div class="form-inline">
+                        <label>WeekDay</label>
+                        <select id="weekdaycomp" class="form-control" style="width:65%;margin-top:10px" [(ngModel)]="dayNamecom" name="weekcomp" value=""(change)="changecolor($event)">
+
+                         
+                          <option>Monday</option>
+                          <option>Tuesday</option>
+                          <option>Wednesday</option>
+                          <option>Thursday</option>
+                          <option>Friday</option>
+                          
+                        </select>
+                      </div>
+                      <!--<label for="search" style="margin-left: 100px;">search</label>-->
+
+
+                    </div>
+
+                    <div class="form-group col-md-6 form-inline">
+                      <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px;margin-top:10px " (click)="cleardatacomp();">Clear</button>
+                      <div style="text-align:center; margin-left:40%">
+
+                        <span [hidden]="mon" class="dotmon">
+                          <label style="margin-left:10px;margin-top:10px">Monday</label>
+                        </span>
+                        <span [hidden]="tue" class="dottue">
+                          <label style="margin-left:10px;margin-top:10px">Tuesday</label>
+                        </span>
+                        <span [hidden]="wed" class="dotwed">
+                          <label style="margin-left:10px;margin-top:10px">Wednesday</label>
+                        
+                        </span>
+                        <span [hidden]="thur" class="dotthurs">
+                          <label style="margin-left:10px;margin-top:10px">Thursday</label>
+                        </span>
+                        <span [hidden]="fri" class="dotfri">
+                          <label style="margin-left:10px;margin-top:10px">Friday</label>
+                        </span>
+
+                      </div>
+                    </div>
+                  </div>
+
+                </fieldset>
+                <div style="color: black">
+                  <p class="font-weight-bold">Double Click to Go for More Details</p>
+                </div>
+                <div style="margin-left:10px;margin-top:1%; height:48vh; overflow-y: auto;background-color:white">
+                  <table class="table table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
+                    <thead>
+                      <tr>
+
+                        <th class="header" scope="col">Customer</th>
+                        <th class="header" scope="col">ccomp #</th>
+                        <th class="header" scope="col">Formula #</th>
+                        <th class="header" scope="col">Formula </th>
+                        <th class="header" scope="col">Package Description</th>
+                        <th class="header" scope="col">Start Date</th>
+                        <th class="header" scope="col">Product Name</th>
+                        <th class="header" scope="col">Week</th>
+                        <th hidden class="header" scope="col">day</th>
+
+
+
+                        <!--<th scope="col">Customer Code</th>-->
+                      </tr>
+                    </thead>
+                    <tbody>
+
+                      <tr *ngFor="let load_custom of loadcompweekdata| filter:dayNamecom:filterMetadata;let i=index;">
+                        <td>{{ load_custom.customer}}</td>
+                        <td>{{ load_custom.stabno }}</td>
+                        <td>{{ load_custom.formulacode }}</td>
+                        <td>{{ load_custom.formulname }}</td>
+                        <td>{{ load_custom.packdescription }}</td>
+                        <td>{{ load_custom.startdate }}</td>
+                        <td>{{ load_custom.productname }}</td>
+                        <td>{{ load_custom.week }}</td>
+                        <td hidden>{{ load_custom.daydata }}</td>
+
+
+                        <!--<td class="tabledatasize">{{ customer_search.CustomerCode}}</td>-->
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </ng-template>
             </ngb-tab>
           </ngb-tabset>
