--- a/ClientApp/src/app/pdr-management/new-chemistry-params/new-chemistry-params.component.html
+++ b/ClientApp/src/app/pdr-management/new-chemistry-params/new-chemistry-params.component.html
@@ -85,7 +85,7 @@
   </div>
   <div style="background-color: #f6f5f1;">
     <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:14%;" (click)="openaddchemistry()">Add New Param</button>
-    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="SaveProperty()">Save</button>
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="savechemistryparamlist()">Save</button>
     <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:1%;" (click)="chemparamdelete()">Delete Param</button>
     <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" matDialogClose>Back</button>
   </div>
