--- a/ClientApp/src/app/pdr-management/pdr-management.component.html
+++ b/ClientApp/src/app/pdr-management/pdr-management.component.html
@@ -2003,117 +2003,53 @@
                 <div class="form-group col-md-6">
                   <h4 style="color: maroon; text-align:center; background-color: lightyellow; font-style: oblique; font-size: xx-large; margin-left: 1%;">CHEMISTRY</h4>
                   <div style="margin-left: 1%; margin-top: 1%; height: 400px; overflow-y: auto; background-color: white ">
-                    <dx-data-grid id="gridContainer " style="width: 100%; height: 35rem;font-family:Verdana;font-style:normal;background-color:white"
-                                  (onSelectionChanged)="selectedChanged($event)"
-                                  [columnAutoWidth]="true"
-                                  [dataSource]="datachem"
-                                  [wordWrapEnabled]="true"
-                                  [showColumnLines]="true"
-                                  [showRowLines]="true"
-                                  [showBorders]="true"
-                                  (onCellClick)="openrawmaterialserach($event)"
-                                  (rowprepared)="rowprepared">
-                      <dxo-editing mode="row"
-                                   [allowUpdating]="true"
-                                   [useIcons]="true">
-                      </dxo-editing>
-                      <dxo-column-chooser [enabled]="false">
-                        or "select"
-                      </dxo-column-chooser>
-                      <dxo-selection mode="single"></dxo-selection>
-                      <dxo-scrolling mode="virtual"></dxo-scrolling>
-
-
-
-                      <dxo-column-chooser [enabled]="false"></dxo-column-chooser>
-                      <dxo-column-fixing [enabled]="true"></dxo-column-fixing>
-
-
-
-                      <dxi-column dataField="ParamId"
-                                  [visible]="false"></dxi-column>
-                      <dxi-column dataField="item" headerCellTemplate="addressHeaderTemplateitem"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplateitem'">
-                        <b style="color: black"></b>
-                      </div>
-                      <dxi-column dataField="Claim" headerCellTemplate="addressHeaderTemplateinciname" [allowEditing]="false"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplateinciname'">
-                        <b style="color: black">Claim</b>
-                      </div>
-                      <dxi-column dataField="Method" headerCellTemplate="addressHeaderTemplateusage" [allowEditing]="false"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplateusage'">
-                        <b style="color: black">Method</b>
-                      </div>
-                      <dxi-column dataField="Limits" headerCellTemplate="addressHeaderTemplatefoa"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplatefoa'">
-                        <b style="color: black;">Limits</b>
-                      </div>
-                      <dxi-column dataField="username" headerCellTemplate="addressHeaderTemplatecomments"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplatecomments'">
-                        <b style="color: black">Username</b>
-                      </div>
-
-
-
-                    </dx-data-grid>
+                    <ag-grid-angular style="width: 100%; height:37rem;font-family:Verdana;font-style:normal;background-color:white"
+                                     class="ag-theme-alpine"
+                                     [rowHeight]="rowHeight"
+                                     [columnDefs]="columnDefs2"
+                                     [rowClassRules]="rowClassRules"
+                                     (columnResized)="onColumnResized($event)"
+                                     (columnVisible)="onColumnVisible($event)"
+                                     #agGrid
+                                     [applyColumnDefOrder]="true"
+                                     [getRowStyle]="getRowStyle"
+                                     [rowStyle]="rowStyle"
+                                     [getRowNodeId]="getRowNodeId"
+                                     [rowSelection]="rowSelection"
+                                     [enableRangeSelection]="true"
+                                     [suppressScrollOnNewData]="true"
+                                     [gridOptions]="gridOptions"
+                                     [defaultColDef]="defaultColDef"
+                                     [rowData]="datachem"
+                                     [overlayLoadingTemplate]="overlayLoadingTemplate"
+                                     (gridReady)="onGridReadytwo($event)">
+                    </ag-grid-angular>
                   </div>
                 </div>
                 <div class="form-group col-md-6">
                   <h4 style="color: maroon; background-color: lightyellow; font-style: oblique; font-size: xx-large; margin-left: 1%; text-align:center; ">MICROBIOLOGY</h4>
                   <div style="margin-left: 1%; margin-top: 1%; height: 400px; overflow-y: auto; background-color: white">
-                    <dx-data-grid id="gridContainer " style="width: 100%; height: 35rem;font-family:Verdana;font-style:normal;background-color:white"
-                                  (onSelectionChanged)="selectedChanged($event)"
-                                  [columnAutoWidth]="true"
-                                  [dataSource]="datamicro"
-                                  [wordWrapEnabled]="true"
-                                  [showColumnLines]="true"
-                                  [showRowLines]="true"
-                                  [showBorders]="true"
-                                  (onCellClick)="openrawmaterialserach($event)"
-                                  (rowprepared)="rowprepared">
-                      <dxo-editing mode="row"
-                                   [allowUpdating]="true"
-                                   [useIcons]="true">
-                      </dxo-editing>
-                      <dxo-column-chooser [enabled]="false">
-                        or "select"
-                      </dxo-column-chooser>
-                      <dxo-selection mode="single"></dxo-selection>
-                      <dxo-scrolling mode="virtual"></dxo-scrolling>
-
-
-
-                      <dxo-column-chooser [enabled]="false"></dxo-column-chooser>
-                      <dxo-column-fixing [enabled]="true"></dxo-column-fixing>
-
-
-
-                      <dxi-column dataField="ParamId"
-                                  [visible]="false"></dxi-column>
-                      <dxi-column dataField="item" headerCellTemplate="addressHeaderTemplateitem"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplateitem'">
-                        <b style="color: black"></b>
-                      </div>
-                      <dxi-column dataField="Test" headerCellTemplate="addressHeaderTemplatetest" [allowEditing]="false"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplatetest'">
-                        <b style="color: black">Test</b>
-                      </div>
-                      <dxi-column dataField="Method" headerCellTemplate="addressHeaderTemplatemethod" [allowEditing]="false"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplatemethod'">
-                        <b style="color: black">Method</b>
-                      </div>
-                      <dxi-column dataField="Limits" headerCellTemplate="addressHeaderTemplatelimiy" cssClass="cell-highlighted"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplatelimiy'">
-                        <b style="color: black; ">Limits</b>
-                      </div>
-                      <dxi-column dataField="username" headerCellTemplate="addressHeaderTemplateuser"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplateuser'">
-                        <b style="color: black">Username</b>
-                      </div>
-
-
-
-                    </dx-data-grid>
+                    <ag-grid-angular style="width: 100%; height:37rem;font-family:Verdana;font-style:normal;background-color:white"
+                                     class="ag-theme-alpine"
+                                     [rowHeight]="rowHeight"
+                                     [columnDefs]="columnDefs1"
+                                     [rowClassRules]="rowClassRules"
+                                     (columnResized)="onColumnResized($event)"
+                                     (columnVisible)="onColumnVisible($event)"
+                                     #agGrid
+                                     [applyColumnDefOrder]="true"
+                                     [getRowStyle]="getRowStyle"
+                                     [rowStyle]="rowStyle"
+                                     [getRowNodeId]="getRowNodeId"
+                                     [rowSelection]="rowSelection"
+                                     [enableRangeSelection]="true"
+                                     [suppressScrollOnNewData]="true"
+                                     [gridOptions]="gridOptions"
+                                     [defaultColDef]="defaultColDef"
+                                     [rowData]="datamicro"
+                                     [overlayLoadingTemplate]="overlayLoadingTemplate"
+                                     (gridReady)="onGridReadytwo($event)">
+                    </ag-grid-angular>
                   </div>
                 </div>
               </div>
